# divvybet-backend

./: README.md
divvy-betting/: Cargo.toml  deploy.sh  profits.json
divvy-betting/js/: createBetUSDT.ts  createTokenAccount.ts  init.ts  package.json
divvy-betting/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  schema.rs  state.rs
divvy-house/: Cargo.toml  deploy.sh  insurance.json
divvy-house/js/: createToken.ts  createTokenAccount.ts  createTokens.ts  init.ts  package-lock.json
divvy-house/src/: error.rs  instruction.rs  lib.rs  processor.rs  schema.rs  state.rs
