[package]
name = "divvybetting"
version = "0.1.0"
description = "Divvy Betting Protocol"
authors = ["Gourav Pathela <gpathela@yahoo.com>"]
homepage = "https://divvy.bet/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.6"
thiserror = "1.0.24"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
spl-associated-token-account = {version = "1.0.1", features = ["no-entrypoint"]}
switchboard-program = "0.1.29" # Switchboard dependency
lexical = "5.2.2" # Switchboard dependency this is 4000x faster
num_enum = "0.5.1"
num-derive = "0.3"
num-traits = "0.2"
fixed = "1.9.0"
typenum = "1.13.0"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "divvybetting"
crate-type = ["cdylib", "lib"]
